--- a/app/src/main/res/layout/activity_sueldos.xml
+++ b/app/src/main/res/layout/activity_sueldos.xml
@@ -87,11 +87,9 @@
         android:layout_marginTop="404dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="153dp"
         android:ems="10"
         android:hint="Número meses"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -131,11 +129,9 @@
         android:layout_marginTop="474dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="82dp"
         android:ems="10"
         android:hint="Número meses"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -147,9 +143,12 @@
         android:layout_marginStart="67dp"
         android:layout_marginLeft="67dp"
         android:layout_marginTop="522dp"
+        android:layout_marginEnd="227dp"
+        android:layout_marginRight="227dp"
         android:onClick="registro"
         android:text="Registrar"
         app:backgroundTint="#00509A"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
