--- a/app/src/main/res/layout/activity_financiamiento.xml
+++ b/app/src/main/res/layout/activity_financiamiento.xml
@@ -37,173 +37,41 @@
         android:id="@+id/editTextCuantia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginLeft="14dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:ems="10"
+        android:hint="Cuantia"
         android:inputType="textPersonName"
-        android:text="Cuantia"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTextMeses"
-        app:layout_constraintEnd_toStartOf="@+id/editTextMeses"
-        app:layout_constraintStart_toStartOf="parent" />
+        tools:layout_editor_absoluteX="14dp"
+        tools:layout_editor_absoluteY="53dp" />
 
     <EditText
         android:id="@+id/editTextMeses"
-        android:layout_width="0dp"
+        android:layout_width="97dp"
         android:layout_height="44dp"
-        android:layout_marginTop="86dp"
-        android:layout_marginEnd="75dp"
-        android:layout_marginRight="75dp"
-        android:layout_marginBottom="89dp"
         android:ems="10"
+        android:hint="Meses"
         android:inputType="textPersonName"
-        android:text="Meses"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextTipoInteres"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editTextCuantia"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="27dp"
-        android:layout_marginLeft="27dp"
-        android:text="Periodo"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
-        app:layout_constraintStart_toStartOf="parent" />
+        tools:layout_editor_absoluteX="240dp"
+        tools:layout_editor_absoluteY="53dp" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="38dp"
-        android:layout_marginRight="38dp"
         android:text="0"
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextCapitalInicial"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTipoInteres" />
-
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="17dp"
-        android:layout_marginLeft="17dp"
-        android:layout_marginBottom="19dp"
-        android:text="Capital"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView19"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginBottom="291dp"
-        android:text="Amortización"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="17dp"
-        android:layout_marginLeft="17dp"
-        android:layout_marginTop="10dp"
-        android:text="Interés"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView19" />
-
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="15dp"
-        android:text="Cuota"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView20" />
-
-    <TextView
-        android:id="@+id/textViewCapital"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginBottom="16dp"
-        android:text="0,00"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView19"
-        app:layout_constraintStart_toEndOf="@+id/textView19" />
+        tools:layout_editor_absoluteX="320dp"
+        tools:layout_editor_absoluteY="183dp" />
 
     <EditText
         android:id="@+id/editTextCapitalInicial"
-        android:layout_width="0dp"
+        android:layout_width="154dp"
         android:layout_height="44dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="54dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="54dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Capital Inicial"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewCapital"
-        app:layout_constraintEnd_toEndOf="@+id/textViewCapital"
-        app:layout_constraintStart_toStartOf="@+id/editTextTipoInteres"
-        app:layout_constraintTop_toTopOf="@+id/textView11" />
-
-    <TextView
-        android:id="@+id/textViewAmort"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="0,00"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/textViewCapital"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCapital" />
-
-    <TextView
-        android:id="@+id/textViewInteres"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="0,00"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/textViewAmort"
-        app:layout_constraintTop_toBottomOf="@+id/textViewAmort" />
-
-    <TextView
-        android:id="@+id/textViewCuota"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="0,00"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/textViewInteres"
-        app:layout_constraintTop_toBottomOf="@+id/textViewInteres" />
+        tools:layout_editor_absoluteX="214dp"
+        tools:layout_editor_absoluteY="127dp" />
 
     <EditText
         android:id="@+id/editTextTipoInteres"
@@ -211,27 +79,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
         android:layout_marginLeft="14dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginTop="109dp"
         android:ems="10"
+        android:hint="Tipo de Interés"
         android:inputType="textPersonName"
-        android:text="Tipo de Interés"
         android:textColor="#000000"
-        app:layout_constraintBottom_toBottomOf="@+id/spinner"
-        app:layout_constraintEnd_toStartOf="@+id/spinner"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="153dp"
-        android:layout_marginBottom="152dp"
-        app:layout_constraintBottom_toTopOf="@+id/textViewCapital"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editTextTipoInteres"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnRegistrarFinanciamiento"
@@ -256,5 +110,217 @@
         app:backgroundTint="#CD0101"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnRegistrarFinanciamiento" />
+
+    <HorizontalScrollView
+        android:layout_width="477dp"
+        android:layout_height="277dp"
+        tools:layout_editor_absoluteX="17dp"
+        tools:layout_editor_absoluteY="207dp">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="120dp"
+                        android:layout_height="match_parent"
+                        android:text="Periodo"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        tools:layout_editor_absoluteX="27dp"
+                        tools:layout_editor_absoluteY="183dp" />
+
+                    <TextView
+                        android:id="@+id/textView18"
+                        android:layout_width="150dp"
+                        android:layout_height="24dp"
+                        android:text="0"
+                        android:textColor="#000000" />
+
+                    <TextView
+                        android:id="@+id/textView24"
+                        android:layout_width="178dp"
+                        android:layout_height="24dp"
+                        android:text="1"
+                        android:textColor="#000000" />
+
+                    <TextView
+                        android:id="@+id/textView26"
+                        android:layout_width="156dp"
+                        android:layout_height="24dp"
+                        android:text="3"
+                        android:textColor="#000000" />
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView17"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Capital"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        tools:layout_editor_absoluteX="17dp"
+                        tools:layout_editor_absoluteY="284dp" />
+
+                    <TextView
+                        android:id="@+id/textViewCapital"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0,00"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        tools:layout_editor_absoluteX="151dp"
+                        tools:layout_editor_absoluteY="287dp" />
+
+                    <TextView
+                        android:id="@+id/capPeriodo1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0.00"
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/capPeriodo2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0,00"
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView19"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Amortización"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        tools:layout_editor_absoluteX="16dp"
+                        tools:layout_editor_absoluteY="327dp" />
+
+                    <TextView
+                        android:id="@+id/textViewAmort"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0,00"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        tools:layout_editor_absoluteX="151dp"
+                        tools:layout_editor_absoluteY="321dp" />
+
+                    <TextView
+                        android:id="@+id/amoPeriodo1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0,00"
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/amoPeriodo2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0,00"
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView20"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Interés"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        tools:layout_editor_absoluteX="17dp"
+                        tools:layout_editor_absoluteY="361dp" />
+
+                    <TextView
+                        android:id="@+id/textViewInteres"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0,00"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        tools:layout_editor_absoluteX="151dp"
+                        tools:layout_editor_absoluteY="354dp" />
+
+                    <TextView
+                        android:id="@+id/intPeriodo1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0,00"
+                        android:textColor="#000000" />
+
+                    <TextView
+                        android:id="@+id/textView84"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="TextView" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <TextView
+                        android:id="@+id/textView21"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Cuota"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        tools:layout_editor_absoluteX="24dp"
+                        tools:layout_editor_absoluteY="399dp" />
+
+                    <TextView
+                        android:id="@+id/textViewCuota"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0,00"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        tools:layout_editor_absoluteX="151dp"
+                        tools:layout_editor_absoluteY="393dp" />
+
+                    <TextView
+                        android:id="@+id/textView85"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="TextView" />
+
+                    <TextView
+                        android:id="@+id/textView86"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="TextView" />
+                </TableRow>
+            </TableLayout>
+        </LinearLayout>
+    </HorizontalScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
