--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,171 +8,130 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="79dp"
-        android:layout_marginEnd="192dp"
-        android:layout_marginRight="192dp"
-        android:layout_marginBottom="532dp"
-        android:onClick="Siguiente"
-        android:text="@string/BotonSiguiente"
-        app:backgroundTint="#00509A"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/registra"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        <Button
+            android:id="@+id/buttonn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"
+            android:onClick="siguienteComprass"
+            android:text="Compras"
+            android:textSize="18sp"
+            app:backgroundTint="#00509A" />
 
-        android:layout_marginTop="18dp"
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"
+            android:onClick="siguienteVenta"
+            android:text="@string/BotonVentas"
+            android:textSize="18sp"
+            app:backgroundTint="#00509A" />
 
-        android:layout_marginEnd="214dp"
-        android:layout_marginRight="214dp"
-        android:layout_marginBottom="593dp"
-        android:onClick="showMyAvtivity"
-        android:text="@string/BotonCalcularInteres"
-        app:backgroundTint="#00509A"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/impuestos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="siguienteImpuestos"
+            android:layout_marginTop="15sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"
+            android:text="IMPUESTOS"
+            android:textSize="18sp"
+            app:backgroundTint="#00509A" />
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        <Button
+            android:id="@+id/registra"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"
+            android:onClick="showMyAvtivity"
+            android:text="@string/BotonCalcularInteres"
+            android:textSize="18sp"
+            app:backgroundTint="#00509A" />
 
-        android:layout_marginTop="143dp"
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="Siguiente"
+            android:layout_marginTop="15sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"
+            android:text="@string/BotonSiguiente"
+            android:textSize="18sp"
+            app:backgroundTint="#00509A" />
 
-        android:layout_marginEnd="303dp"
-        android:layout_marginRight="303dp"
-        android:layout_marginBottom="468dp"
-        android:onClick="siguienteVenta"
-        android:text="@string/BotonVentas"
-        app:backgroundTint="#00509A"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/button8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"
+            android:layout_marginTop="15sp"
+            android:onClick="siguienteFinanciamiento"
+            android:text="@string/BotonSiguienteFinanciamiento"
+            android:textSize="18sp"
+            app:backgroundTint="#00509A" />
 
-    <Button
-        android:id="@+id/impuestos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="263dp"
-        android:layout_marginLeft="263dp"
-        android:layout_marginTop="79dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginRight="27dp"
-        android:layout_marginBottom="532dp"
-        android:onClick="siguienteImpuestos"
-        android:text="IMPUESTOS"
-        app:backgroundTint="#00509A"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"
+            android:onClick="siguientePresupuestoC"
+            android:text="Presupuesto de Caja"
+            android:textSize="18sp"
+            app:backgroundTint="#00509A" />
 
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="219dp"
-        android:layout_marginLeft="219dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginRight="27dp"
-        android:layout_marginBottom="595dp"
-        android:onClick="siguienteFinanciamiento"
-        android:text="@string/BotonSiguienteFinanciamiento"
-        app:backgroundTint="#00509A"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/button7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"
+            android:onClick="verFlujo"
+            android:text="@string/titulo_flojo"
+            android:textSize="18sp"
+            app:backgroundTint="#00509A" />
 
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="62dp"
-        android:layout_marginLeft="62dp"
-        android:layout_marginTop="345dp"
-        android:layout_marginEnd="92dp"
-        android:layout_marginRight="92dp"
-        android:layout_marginBottom="266dp"
-        android:onClick="verFlujo"
-        android:text="@string/titulo_flojo"
-        app:backgroundTint="#00509A"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"
+            android:onClick="siguienteGrafico"
+            android:text="Generar Gráficos"
+            android:textSize="18sp"
+            app:backgroundTint="#00509A" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="172dp"
-        android:layout_marginLeft="172dp"
-        android:layout_marginTop="143dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginRight="27dp"
-        android:layout_marginBottom="468dp"
-        android:onClick="siguientePresupuestoC"
-        android:text="Presupuesto de Caja"
-        app:backgroundTint="#00509A"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="223dp"
-        android:layout_marginEnd="287dp"
-        android:layout_marginRight="287dp"
-        android:layout_marginBottom="388dp"
-        android:onClick="siguienteComprass"
-        android:text="Compras"
-        app:backgroundTint="#00509A"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnComenzar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="219dp"
-        android:layout_marginLeft="219dp"
-        android:layout_marginTop="223dp"
-        android:layout_marginEnd="74dp"
-        android:layout_marginRight="74dp"
-        android:layout_marginBottom="388dp"
-        android:onClick="Comenzar"
-        android:text="@string/botonComenzar"
-        app:backgroundTint="#00509A"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/button11"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"
+            android:text="Generar PDF"
+            android:textSize="18sp"
+            app:backgroundTint="#00509A" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
