--- a/app/src/main/res/layout/activity_spending_interest.xml
+++ b/app/src/main/res/layout/activity_spending_interest.xml
@@ -740,6 +740,19 @@
                     android:text="@string/show_comercial_interes"
                     app:cornerRadius="10sp" />
 
+                <Button
+                    android:id="@+id/btn_siguiente"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20sp"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginRight="20sp"
+                    android:layout_marginBottom="10sp"
+                    android:backgroundTint="@color/blue_app"
+                    android:onClick="Siguiente"
+                    android:text="Siguiente"
+                    app:cornerRadius="10sp" />
+
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
