--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -125,9 +125,10 @@
             android:id="@+id/button11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15sp"
             android:layout_marginLeft="30sp"
+            android:layout_marginTop="15sp"
             android:layout_marginRight="30sp"
+            android:onClick="crearReporte"
             android:text="Generar PDF"
             android:textSize="18sp"
             app:backgroundTint="#00509A" />
