--- a/app/src/main/res/layout/activity_presupuesto_caja.xml
+++ b/app/src/main/res/layout/activity_presupuesto_caja.xml
@@ -50,14 +50,16 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:onClick="totalpc"
-                                android:text="Calcular Total" />
+                                android:text="Calcular Total"
+                                app:backgroundTint="#3F51B5" />
 
                             <Button
                                 android:id="@+id/btnNext"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:onClick="upload"
-                                android:text="Siguiente" />
+                                android:text="Siguiente"
+                                app:backgroundTint="#00509A" />
 
 
                         </TableRow>
