--- a/app/src/main/res/layout/activity_sueldos.xml
+++ b/app/src/main/res/layout/activity_sueldos.xml
@@ -162,7 +162,7 @@
         android:layout_marginEnd="68dp"
         android:layout_marginRight="68dp"
         android:onClick="anterior"
-        android:text="Cancelar"
+        android:text="Siguiente"
         app:backgroundTint="#CD0101"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
