Reporte PDF para los flujos de caja trimestral, semestral, anual y quincenal

--- a/app/src/main/res/layout/activity_menu_flujo_de_caja.xml
+++ b/app/src/main/res/layout/activity_menu_flujo_de_caja.xml
@@ -99,6 +99,18 @@
                 android:text="quinquenal"
                 android:textSize="18sp"
                 app:backgroundTint="#00509A" />
+
+            <Button
+
+                android:id="@+id/btnPdf"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30sp"
+                android:layout_marginTop="15sp"
+                android:layout_marginRight="30sp"
+                android:text="Reporte PDF"
+                android:textSize="18sp"
+                app:backgroundTint="#00509A" />
     </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
