--- a/app/src/main/res/layout/activity_grafico_quinquenal.xml
+++ b/app/src/main/res/layout/activity_grafico_quinquenal.xml
@@ -49,8 +49,8 @@
     </HorizontalScrollView>
 
     <LinearLayout
-        android:layout_width="365dp"
-        android:layout_height="142dp"
+        android:layout_width="219dp"
+        android:layout_height="123dp"
         android:layout_marginStart="231dp"
         android:layout_marginLeft="231dp"
         android:layout_marginTop="675dp"
@@ -69,20 +69,32 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
-                <Button
-                    android:id="@+id/button15"
-                    android:layout_width="84dp"
-                    android:layout_height="33dp"
-                    app:backgroundTint="#000000" />
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/textView13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="33dp"
-                    android:text="Primer Año"
-                    android:textColor="#000000" />
+                    <Button
+                        android:id="@+id/button15"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        app:backgroundTint="#000000" />
+
+                    <TextView
+                        android:id="@+id/textView13"
+                        android:layout_width="wrap_content"
+                        android:layout_height="33dp"
+                        android:text="Trimestral"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
+                </TableRow>
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <TableRow
                     android:layout_width="match_parent"
@@ -98,27 +110,42 @@
                         android:id="@+id/textView27"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Segundo Año"
-                        android:textColor="#000000" />
+                        android:text="Semestral"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
+
                 </TableRow>
+
             </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="29dp">
+                android:layout_height="match_parent">
 
-                <Button
-                    android:id="@+id/button16"
-                    android:layout_width="wrap_content"
-                    android:layout_height="31dp"
-                    app:backgroundTint="#00FF00" />
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/textView97"
-                    android:layout_width="101dp"
-                    android:layout_height="wrap_content"
-                    android:text="Tercer Año"
-                    android:textColor="#000000" />
+                    <Button
+                        android:id="@+id/button16"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        app:backgroundTint="#00FF00" />
+
+                    <TextView
+                        android:id="@+id/textView97"
+                        android:layout_width="103dp"
+                        android:layout_height="wrap_content"
+                        android:text="Anual"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
+                </TableRow>
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
                 <TableRow
                     android:layout_width="match_parent"
@@ -134,34 +161,12 @@
                         android:id="@+id/textView98"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Cuarto Año"
-                        android:textColor="#000000" />
+                        android:text="Quinquenal"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
+
                 </TableRow>
 
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <Button
-                    android:id="@+id/button18"
-                    android:layout_width="wrap_content"
-                    android:layout_height="33dp"
-                    app:backgroundTint="#FFFF00" />
-
-                <TextView
-                    android:id="@+id/textView99"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Quinto año"
-                    android:textColor="#000000" />
             </TableRow>
         </TableLayout>
     </LinearLayout>
