--- a/app/src/main/res/layout/activity_menu_flujo_de_caja.xml
+++ b/app/src/main/res/layout/activity_menu_flujo_de_caja.xml
@@ -89,6 +89,17 @@
                 android:text="Generar Gráfico"
                 android:textSize="18sp"
                 app:backgroundTint="#00509A" />
+
+            <Button
+                android:id="@+id/button20"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30sp"
+                android:layout_marginTop="15sp"
+                android:layout_marginRight="30sp"
+                android:textSize="18sp"
+                app:backgroundTint="#00509A"
+                android:text="Inicio" />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
